<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto" >

    <item
        android:icon="@drawable/info_icon"
        android:showAsAction="always"
        android:title=""
        android:visible="true"
        yourapp:showAsAction="always">
        <menu>
            <item
                android:id="@+id/rules"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/rules"/>
            <item
                android:id="@+id/reset"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/reset"/>
            <item
                android:id="@+id/about"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/about"/>
        </menu>
    </item>

</menu>