<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/f_button_bg_states"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/item_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/item_go"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@drawable/green_button_bg_states"
            android:drawablePadding="5dip"
            android:drawableTop="@drawable/ic_menu_play_clip"
            android:gravity="center"
            android:text="@string/item_go"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/item_stat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@drawable/green_button_bg_states"
            android:drawablePadding="5dip"
            android:drawableTop="@drawable/ic_menu_sort_by_size"
            android:gravity="center"
            android:text="@string/item_stat"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/item_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@drawable/green_button_bg_states"
            android:drawablePadding="5dip"
            android:drawableTop="@drawable/ic_menu_my_calendar"
            android:gravity="center"
            android:text="@string/item_reminder"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>