<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom_edit="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1.0" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dip"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:background="#cccccc" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/t_button_bg_states"
                android:gravity="center_vertical"
                android:padding="10dip" >

                <CheckBox
                    android:id="@+id/check1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/day1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/time1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00:00"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:background="#cccccc" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/t_button_bg_states"
                android:gravity="center_vertical"
                android:padding="10dip" >

                <CheckBox
                    android:id="@+id/check2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/day2"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/time2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00:00"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:background="#cccccc" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/t_button_bg_states"
                android:gravity="center_vertical"
                android:padding="10dip" >

                <CheckBox
                    android:id="@+id/check3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/day3"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/time3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00:00"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:background="#cccccc" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/t_button_bg_states"
                android:gravity="center_vertical"
                android:padding="10dip" >

                <CheckBox
                    android:id="@+id/check4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/day4"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/time4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00:00"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:background="#cccccc" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/view5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/t_button_bg_states"
                android:gravity="center_vertical"
                android:padding="10dip" >

                <CheckBox
                    android:id="@+id/check5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/day5"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/time5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00:00"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:background="#cccccc" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/view6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/t_button_bg_states"
                android:gravity="center_vertical"
                android:padding="10dip" >

                <CheckBox
                    android:id="@+id/check6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/day6"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/time6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00:00"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:background="#cccccc" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/view7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/t_button_bg_states"
                android:gravity="center_vertical"
                android:padding="10dip" >

                <CheckBox
                    android:id="@+id/check7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/day7"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/time7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00:00"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:background="#cccccc" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:orientation="vertical" >
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>